12-09-2018
- Added infinite loop check
- Fixed group buy prices
- Fixed no more bonus from Malus

11-09-2018
- Fixed world not saving experience
- Fixed Student Followers/Mining confusion
- Fixed Twin rounding
- Fixed group charts not updating
- Light bulb ignore repeatable research, if quantity > max buy

10-09-2018
- Fixed loading error
- Fixed some typos

09-09-2018
- Initial release