@@ -67,3 +67,9 @@ header .header-nav .nav-link,
     width: 1.5rem !important;
   }
 }
+
+.nav-group-content {
+  border-left: 10px solid #49afd9 !important;
+  border-radius: 5px 0px 0px 5px !important;
+  margin: 2px 0px 0px 2px !important;
+}
