@@ -29,3 +29,6 @@
 .ui-widget-content {
   border: 1px solid #49afd9 !important;
 }
+.nav-group-content {
+  background: #404e60 !important;
+}
