@@ -25,3 +25,6 @@
 .ui-widget-content {
   border: 1px solid #0077b7 !important;
 }
+.nav-group-content {
+  background: #fff !important;
+}
